🧪 Add example for validating license with DevPayr SDK

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "prepare": "npm run build",
     "clean": "rimraf dist",
     "dev": "tsc --watch",
-    "test": "echo \"No tests yet\""
+    "test": "echo \"No tests yet\"",
+    "example": "ts-node src/examples/validateLicense.ts"
   },
   "repository": {
     "type": "git",
@@ -49,8 +50,9 @@
   },
   "sideEffects": false,
   "devDependencies": {
-    "typescript": "^5.4.0",
-    "rimraf": "^5.0.0"
+    "rimraf": "^5.0.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.0"
   },
   "dependencies": {
     "axios": "^1.6.0",
